--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,7 @@
 name: Security - Docker - Scan
 
-## Run workflow when new changes are proposed
-on: [pull_request]
-
+on: 
+  workflow_dispatch:
 jobs:
   scan:
     name: Scan Docker Images
